--- a/index.html
+++ b/index.html
@@ -4,55 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Grid CSS</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>ACME Web Design</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
-    
 <body>
-    <div class="container">
-        <h1 class="brand">
-            <span>ACME</span> Web Design
-        </h1>
-    </div>
-    <div class="wrapper animated bounceinLeft">
-        <div class="company-info">
-            <h3>ACME Web Design</h3>
-            <ul>
-                <li><i class="fa fa-road"></i> 200 Something Street</li>
-                <li><i class="fa fa-phone"></i> (123) 456-7890</li>
-                <li><i class="fa fa-envelope"></i> email@mail.com</li>
-            </ul>
+    <div class="container animated bounceInLeft">
+        <h1 class="brand"><span>ACME</span> Web Design</h1>
+        <div class="wrapper">
+            <div class="company-info">
+                <h3>ACME Web Design</h3>
+                <ul>
+                    <li><i class="fa fa-road"></i> 1 Main Street</li>
+                    <li><i class="fa fa-phone"></i> (555) 555-5555</li>
+                    <li><i class="fa fa-envelope"></i> contact@acme.com</li>
+                </ul>
+            </div>
+            <div class="contact">
+                <h3>Email Us</h3>
+                <div class="alert">Your message has been sent</div>
+                <form id="contactForm">
+                    <p>
+                        <label>Name</label>
+                        <input type="text" name="name" id="name" required>
+                    </p>
+                    <p>
+                        <label>Company</label>
+                        <input type="text" name="company" id="company">
+                    </p>
+                    <p>
+                        <label>Email Address</label>
+                        <input type="email" name="email" id="email" required>
+                    </p>
+                    <p>
+                        <label>Phone Number</label>
+                        <input type="text" name="phone" id="phone">
+                    </p>
+                    <p class="full">
+                        <label>Message</label>
+                        <textarea name="message" rows="5" id="message"></textarea>
+                    </p>
+                    <p class="full">
+                        <button type="submit">Submit</button>
+                    </p>
+                </form>
+            </div>
         </div>
-        <div class="contact">
-            <h3>Email Us</h3>
-            <form>
-                <p>
-                    <label>Name</label>
-                    <input type="text" name="name">
-                </p>
-                <p>
-                    <label>Company</label>
-                    <input type="text" name="company">
-                </p>
-                <p>
-                    <label>Email Address</label>
-                    <input type="text" name="email">
-                </p>
-                <p>
-                    <label>Phone Number</label>
-                    <input type="text" name="phone">
-                </p>
-                <p class="full">
-                    <label>Message</label>
-                    <textarea name="message" rows="5"></textarea>
-                </p>
-                <p class="full">
-                    <button>Submit</button>
-                </p>
-            </form>
-        </div>
     </div>
+
+    <script src="https://www.gstatic.com/firebasejs/4.5.1/firebase.js"></script>
+    <script src="main.js"></script>
+
 </body>
 </html>
